--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,79 @@
+/*
+
+----------------------ПАЛИТРА-------------------
+
+======================ГЛАВНАЯ СТРАНИЦА===============
+цвет основного текста #757575;
+вторичный цвет текста  #212121;
+цвет акцента #2196F3;
+основной цвет фона  #E5E5E5;
+вторичный цвет фона ("наша команда") #F5F4FA;
+цвет акцента (также фон кнопки в "Герой") #2196F3;
+цвет фона шапки белый #FFFFFF;
+цвет фона героя и футера #2F303A;
+
+цвет тени фона кнопки (в "Герой") box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+цвет контактов в футере rgba(255, 255, 255, 0.6);
+*/
+
+:root {
+  --primary-text-color: #757575;
+  --title-text-color: #212121;
+  --white-text-color: #ffffff;
+
+  --accent-color: #2196f3;
+
+  --primary-background-color: #e5e5e5;
+  --secondary-background-color: #f5f4fa;
+  --header-background-color: #ffffff;
+  --dark-background-color: #2f303a;
+}
+
 body {
+  background-color: var(--primary-background-color);
+  color: var(--primary-text-color);
+
   font-family: "Roboto", sans-serif;
   font-style: normal;
+}
+
+/*================ШАПКА====================*/
+
+.header {
+  background-color: var(--header-background-color);
 }
 
 .list {
   list-style: none;
 }
+
 .link {
   text-decoration: none;
 }
 
 .logo {
-  font-family: Raleway sans-serif;
-  font-style: normal;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: #2196f3;
+  color: var(--accent-color);
 }
 
 .logo-item {
   color: #000000;
 }
 
-.navigation-list-link {
+.navigation .navigation-list-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: #212121;
+  color: var(--title-text-color);
+}
+
+.navigation .navigation-list-link.link.current {
+  color: var(--accent-color);
 }
 
 .header-tel-link,
@@ -39,7 +83,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  color: #757575;
+  color: var(--primary-text-color);
 }
 
 .navigation-list-link:hover,
@@ -48,7 +92,13 @@ body {
 .header-tel-link:focus,
 .header-mail-link:hover,
 .header-mail-link:focus {
-  color: #2196f3;
+  color: var(--accent-color);
+}
+
+/*==========ГЕРОЙ=============*/
+
+.hero {
+  background: var(--dark-background-color);
 }
 
 .hero-title {
@@ -57,9 +107,14 @@ body {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  color: var(--white-text-color);
 }
 
 .modal-btn {
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -67,16 +122,23 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: var(--white-text-color);
 }
 
-.title {
+/*=======================СЕКЦИИ====================*/
+
+/*=====================ОСОБЕННОСТИ==================*/
+
+.features {
+}
+
+.section-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--title-text-color);
 }
 
 .subtitle {
@@ -85,7 +147,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #212121;
+  color: var(--title-text-color);
 }
 
 .description {
@@ -93,7 +155,17 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--primary-text-color);
+}
+
+/*=====================ЧЕМ ЗАНИМАЕМСЯ==================*/
+.work {
+}
+
+/*=====================НАША КОМАНДА==================*/
+
+.team {
+  background-color: var(--secondary-background-color);
 }
 
 .name-title {
@@ -102,7 +174,7 @@ body {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--title-text-color);
 }
 
 .position {
@@ -111,7 +183,26 @@ body {
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--primary-text-color);
+}
+
+/*=========================ФУТЕР=======================*/
+
+.footer {
+  background: var(--dark-background-color);
+}
+
+.footer-logo-item {
+  color: var(--white-text-color);
+}
+
+.address {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--white-text-color);
 }
 
 .footer-tel-link,
@@ -127,32 +218,28 @@ body {
 .footer-tel-link:focus,
 .footer-mail-link:hover,
 .footer-mail-link:focus {
-  color: #2196f3;
-}
-
-.address {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  /* color: #ffffff; */
+  color: var(--accent-color);
 }
 
 /*=======ПОРТФОЛИО========*/
+.portfolio-title {
+  color: var(--title-text-color);
+}
 
 .filter-list {
+  background-color: var(--secondary-background-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--title-text-color);
 }
 
 .filter-list:hover,
 .filter-list:focus {
-  color: #ffffff;
+  background: var(--accent-color);
+  color: var(--white-text-color);
 }
 
 .portfolio-list-name {
@@ -160,7 +247,7 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  color: #212121;
+  color: var(--title-text-color);
 }
 
 .portfolio-list-type {
@@ -168,5 +255,5 @@ body {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  color: #757575;
+  color: var(--primary-text-color);
 }
